Lots of basic core cleanup.